--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@ const sentences = [
         "options": [
             "chữ kỷ",
             "chữ ký",
-            "chữ kĩ",
+            "chự kỹ",
             "chử ký"
         ]
     },
